# WengoPhone

./: CMakeLists-owbuild.txt  CMakeLists.txt  DefineCompilerFlags.cmake  DefineInstallationPaths.cmake  DefineWengoDefaults.cmake  DefineWengoOptions.cmake  README  RegisterWengoProtocol.reg  SConscript  SConstruct  SOptions
crashreport/: CMakeLists.txt  CrashReport.ui  FtpUpload.cpp  FtpUpload.h  QtCrashReport.cpp  QtCrashReport.h  SConscript  main.cpp
libs/curl/: CMakeLists.txt  Makefile.in  README_WENGO  SConscript  configure  configure.ac
libs/curl/include/: Makefile.in
libs/curl/lib/: Makefile.Watcom  Makefile.in  config-linux.h  config-macosx.h  config.h.in  connect.c  easy.c  getinfo.c  http_ntlm.c  http_ntlm.h  sendf.c  setup.h  ssluse.c  tftp.c
libs/curl/tests/: runtests.pl  testcurl.pl
libs/gaim/: CMakeLists.txt  SConscript
libs/gaim/src/: COPYRIGHT  Makefile.in  Makefile.mingw  aclocal.m4  config.h  config.h.in  config.h.mingw  configure  configure.ac  gaim.spec  gaim.spec.in
libs/idle/: CMakeLists.txt  SConscript
libs/idle/src/: Idle.cpp  MouseOrKeyboardEventFilter.cpp  MouseOrKeyboardEventFilter.h
libs/imwrapper/: CMakeLists.txt  EnumPresenceState.h  IMAccount.h  IMChatMap.cpp  IMChatSession.cpp  IMContactMap.cpp  IMContactMap.h  IMWrapperFactory.cpp  SConscript
libs/imwrapper/include/: IMAccount.h  IMAccountHandler.h  IMChat.h  IMChatMap.h  IMChatSession.h  IMConnect.h  IMContact.h  IMContactMap.h  IMPresence.h  IMWrapperFactory.h
libs/imwrapper/null/: NullIMChat.cpp  NullIMChat.h  NullIMConnect.h  NullIMPresence.h
libs/imwrapper/src/: Account.cpp  EnumIMProtocol.cpp  EnumPresenceState.cpp  IMAccount.cpp  IMAccountHandler.cpp  IMAccountHandlerFileDataLayer.cpp  IMAccountHandlerFileStorage.cpp  IMAccountHandlerParser.cpp  IMAccountHandlerXMLSerializer.cpp  IMAccountParameters.cpp  IMAccountParser.cpp  IMAccountXMLSerializer.cpp  IMChatMap.cpp  IMChatSession.cpp  IMContact.cpp  IMContactMap.cpp  IMContactSet.cpp  IMContactXMLSerializer.cpp  IMWrapperFactory.cpp
libs/imwrapper/tests/: serialize-test.cpp
libs/openssl/: CMakeLists.txt  SConscript
libs/owbrowser/: CMakeLists.txt  OWBrowser.h  QtBrowser.cpp  QtBrowser.h  SConscript
libs/owbrowser/src/: QtBrowser.cpp
libs/pixertool/: CMakeLists.txt  README  SConscript
libs/pixertool/include/: directx-pixertool.h  ffmpeg-pixertool.h  pixertool.h  quicktime-pixertool.h  v4l-pixertool.h
libs/pixertool/src/: null-pixertool.cpp  pixertool.cpp
libs/pixertool/tests/: PixerToolTest.cpp  PixerToolTest.h  SConscript
libs/portaudio/: CMakeLists.txt  SConscript  portaudio.def
libs/portaudio/pa_tests/: pa_devs.c
libs/portaudio/pa_unix_oss/: pa_unix_oss.c
libs/portaudio/tests/: SConscript  main.c
libs/qtutil/: AUTHORS  CMakeLists.txt  README  SConscript  qtutil.qrc
libs/qtutil/include/: EnabledChangeEventFilter.h  EventFilter.h  KeyEventFilter.h  MouseEventFilter.h  NonResizeableWidget.h  Object.h  PaintEventFilter.h  PostEvent.h  QObjectThreadSafe.h  ResizeEventFilter.h  StringListConvert.h  WidgetFactory.h
libs/qtutil/src/: DesktopService.cpp  EnabledChangeEventFilter.cpp  EventFilter.cpp  ImageSelector.cpp  KeyEventFilter.cpp  LanguageChangeEventFilter.cpp  MacDesktopService.cpp  MouseEventFilter.cpp  NonResizeableWidget.cpp  Object.cpp  PaintEventFilter.cpp  PixmapMerging.cpp  QObjectThreadSafe.cpp  QtClickableLabel.cpp  QtThumbnailDirModel.cpp  QtWengoStyleLabel.cpp  ResizeEventFilter.cpp  SafeConnect.cpp  StatusBarStyle.cpp  StringListConvert.cpp  ThreadEventFilter.cpp  ThumbnailView.cpp  ToolButtonMacStyle.cpp  ToolTipLineEdit.cpp  UpQComboBox.cpp  WengoStyleLabel.cpp  Widget.cpp  WidgetBackgroundImage.cpp  WidgetFactory.cpp  WindowsDesktopService.cpp  Wizard.cpp
libs/qtutil/tests/: CMakeLists.txt  SConscript  desktopservice.cpp
libs/samplerate/: CMakeLists.txt
libs/skinstyle/: CMakeLists.txt  README  SConscript
libs/skinstyle/src/: SkinButton.cpp  SkinButton.h  SkinInfoReader.cpp  SkinInfoReader.h  SkinStyle.cpp  SkinStyle.h  SkinWidget.cpp  SkinWidget.h  SkinWindow.cpp  SkinWindow.h
libs/softupdater/: CMakeLists.txt  SConscript  SoftUpdater.cpp  SoftUpdater.h
libs/softupdater/src/: SoftUpdater.cpp
libs/softupdater/tests/: SConscript  main.cpp
libs/sound/: AUTHORS  CMakeLists.txt  SConscript
libs/sound/include/: AudioDevice.h  NoSoundCardException.h  Sound.h  SoundMixer.h  SoundMixerException.h
libs/sound/src/: AudioDevice.cpp  EnumDeviceType.cpp  EnumWin32DeviceType.h  VolumeControl.cpp
libs/sound/tests/: main.cpp
libs/timer/: CMakeLists.txt  SConscript
libs/timer/include/: wtimer.h
libs/tinyxml/: CMakeLists.txt  SConscript  tinyxml.h
libs/trayicon/: CMakeLists.txt  SConscript  trayicon.cpp  trayicon.h  trayicon_win.cpp  trayicon_x11.cpp
libs/trayicon/test/: main.cpp
libs/webcam/: CMakeLists.txt  EasyCMakeLists.txt  SConscript
libs/wenbox/: CMakeLists.txt  SConscript
wengophone/sounds/: CMakeLists.txt
wengophone/src/: CMakeLists-buildid.txt  CMakeLists.txt  SConscript  WengoPhoneBuildId.cpp  WengoPhoneBuildId.h  WengoPhoneBuildIdSConscript
wifo-sfp-fw-pxy/sfp-plugin/: CMakeLists.txt  SConscript
wifo/eXosip/: CMakeLists.txt  SConscript
wifo/httptunnel/: CMakeLists.txt  SConscript  httptunnel.c  httptunnel.h
wifo/libosip2/: CMakeLists-external.txt  CMakeLists-internal.txt  CMakeLists.txt  SConscript
wifo/netlib/: CMakeLists.txt  SConscript  bugfix.cpp
wifo/ortp/: CMakeLists.txt  SConscript
wifo/phapi/: CMakeLists-phamrplugin.txt  CMakeLists-phspeexplugin.txt  CMakeLists.txt  SConscript  aec-new.cpp  aec.cpp  aec.h  aec2.cpp  aec2.h  fidlib.c  fidlib.h  fidmkf.h  msdirent.c  owpl.h  owpl_plugin.c  owpl_plugin.h  phapi-darwin.c  phapi-old.c  phapi-old.h  phapi.c  phapi.h  phastream.h  phaudiodriver.c  phaudiodriver.h  phcall.c  phcall.h  phcodec-amr-wrapper.c  phcodec-avcodec-wrapper.c  phcodec-avcodec-wrapper.h  phcodec-h263.c  phcodec-h263.h  phcodec-h264.c  phcodec-intel-ipp.c  phcodec-mpeg4.c  phcodec-mpeg4.h  phcodec-speex.c  phcodec.c  phcodec.h  phdebug.h  phevents.c  (+38 more)
wifo/phapi-util/: CMakeLists.txt  SConscript
(+5591 files in other folders)
